# structured-output-api

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/structured_output_api/: __init__.py  api.py  extractor.py  schemas.py
tests/: test_api.py  test_extractor.py  test_schemas.py
