[project]
name = "structured-output-api"
version = "0.1.0"
description = "API that converts free text into structured JSON using LLMs with Pydantic validation via Instructor."
license = {text = "MIT"}
authors = [{name = "Marlon Barreto", email = "mbarretot@hotmail.com"}]
keywords = ["LLM", "structured-output", "AI", "Pydantic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "instructor>=1.7.0",
    "openai>=1.60.0",
    "anthropic>=0.43.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/marlonbarreto-git/structured-output-api"
Repository = "https://github.com/marlonbarreto-git/structured-output-api"
Issues = "https://github.com/marlonbarreto-git/structured-output-api/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/structured_output_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
